[package]
edition = "2021"
name = "mudb"
version = "0.1.0"

[workspace]
members = ["mudb-server"]

[dependencies]
anyhow = "1.0"
cap-std = { version = "0.25", features = ["fs_utf8"] }
cap-tempfile = { version = "0.25" }
rusty_ulid = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
