[package]
edition = "2021"
name = "mudb"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
cap-std = { version = "0.25", features = ["fs_utf8"] }
cap-tempfile = { version = "0.25" }
env_logger = "0.9"
log = "0.4"
rusty_ulid = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
test-log = { version = "0.2", features = ["trace"] }

[profile.bench]
debug = true

[[bench]]
name = "readwrite"
harness = false
