[package]
name = "mudb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cap-std = "0.25.2"
cap-tempfile = "0.25.2"
clap = { version = "3.2.15", features = ["derive"] }
mudb = { version = "0.1.0", path = ".." }
